--- a/pages/download.rst.j2
+++ b/pages/download.rst.j2
@@ -215,7 +215,9 @@ CentOS
 Fedora
 ======
 
-|FEDORA_LOGO| You can install a repository for automatic updates (repo file) or download
+|FEDORA_LOGO| repositories
+
+You can install a repository for automatic updates (repo file) or download
 the RPM directory and install it. The repo contains both stable and develop versions, just
 the RPM names are different.
 
