Hide the navbar sooner

--- a/doc/_static/my_theme.css
+++ b/doc/_static/my_theme.css
@@ -72,7 +72,7 @@
 .nuitka-price p::first-letter {
     color: white;
     text-align: center;
-    font-size: 14px;
+    font-size: 14px;ma
     vertical-align: 20px
 
 }
@@ -165,4 +165,44 @@
 
 .socialbutton.facebook {
     background-color: #435D96;
+}
+
+@media screen and (max-width:900px) {
+    .wy-body-for-nav {
+        background: #fcfcfc
+    }
+
+    .wy-nav-top {
+        display: block
+    }
+
+    .wy-nav-side {
+        left: -300px
+    }
+
+    .wy-nav-side.shift {
+        width: 85%;
+        left: 0
+    }
+
+    .wy-menu.wy-menu-vertical, .wy-side-nav-search, .wy-side-scroll {
+        width: auto
+    }
+
+    .wy-nav-content-wrap {
+        margin-left: 0
+    }
+
+    .wy-nav-content-wrap .wy-nav-content {
+        padding: 1.618em
+    }
+
+    .wy-nav-content-wrap.shift {
+        position: fixed;
+        min-width: 100%;
+        left: 85%;
+        top: 0;
+        height: 100%;
+        overflow: hidden
+    }
 }
